Oppdater build.gradle.kts (#248)
* Rename til FellesTestOppsett

* Bump Testcontainers

* Oppdater build.gradle.kts

* Riktig Testcontainer

* Sorter build.gradle.kts